salesforce-app/force-app/main/default/objects/Application__c/Application__c.object-meta.xml
<CustomObject>
    <label>Application</label>
    <pluralLabel>Applications</pluralLabel>
    <nameField>
        <label>Application Name</label>
        <type>AutoNumber</type>
        <displayFormat>REF-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>A housing application linking one Applicant to one Property. Junction object between Applicant__c and Property__c.</description>
</CustomObject>