salesforce-app/force-app/main/default/objects/Application__c/fields/Household_Size__c.field-meta.xml
<CustomField>
    <fullName>Household_Size__c</fullName>
    <label>Household Size</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Number of people who will be living in the property</description>
</CustomField>