salesforce-app/force-app/main/default/objects/Application__c/fields/Income_Range__c.field-meta.xml
<CustomField>
    <fullName>Income_Range__c</fullName>
    <label>Income Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under $20k</fullName>
            </value>
            <value>
                <fullName>$20k-$40k</fullName>
                <label>$20k - $40k</label>
            </value>
            <value>
                <fullName>$40k-$60k</fullName>
                <label>$40k - $60k</label>
            </value>
            <value>
                <fullName>Over $60k</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>