salesforce-app/force-app/main/default/objects/Application__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <type>LongTextArea</type>
    <length>2000</length>
    <description>Internal staff notes</description>
</CustomField>