salesforce-app/force-app/main/default/objects/Application__c/fields/Preferred_Move_In__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Move_In__c</fullName>
    <label>Preferred Move-In Date</label>
    <type>Date</type>
</CustomField>