salesforce-app/force-app/main/default/objects/Application__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <label>Submitted Date</label>
    <type>DateTime</type>
    <description>Auto-populated by Apex when the application is submitted</description>
</CustomField>